; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/nscd/extr_config.c_configuration_get_entry.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/nscd/extr_config.c_configuration_get_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.configuration_entry = type { i32 }
%struct.configuration = type { i64, %struct.configuration_entry** }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.configuration_entry* @configuration_get_entry(%struct.configuration* %0, i64 %1) #0 {
  %3 = alloca %struct.configuration*, align 8
  %4 = alloca i64, align 8
  store %struct.configuration* %0, %struct.configuration** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = call i32 @TRACE_IN(%struct.configuration_entry* (%struct.configuration*, i64)* @configuration_get_entry)
  %6 = load %struct.configuration*, %struct.configuration** %3, align 8
  %7 = icmp ne %struct.configuration* %6, null
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  %10 = load i64, i64* %4, align 8
  %11 = load %struct.configuration*, %struct.configuration** %3, align 8
  %12 = getelementptr inbounds %struct.configuration, %struct.configuration* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ult i64 %10, %13
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  %17 = call i32 @TRACE_OUT(%struct.configuration_entry* (%struct.configuration*, i64)* @configuration_get_entry)
  %18 = load %struct.configuration*, %struct.configuration** %3, align 8
  %19 = getelementptr inbounds %struct.configuration, %struct.configuration* %18, i32 0, i32 1
  %20 = load %struct.configuration_entry**, %struct.configuration_entry*** %19, align 8
  %21 = load i64, i64* %4, align 8
  %22 = getelementptr inbounds %struct.configuration_entry*, %struct.configuration_entry** %20, i64 %21
  %23 = load %struct.configuration_entry*, %struct.configuration_entry** %22, align 8
  ret %struct.configuration_entry* %23
}

declare dso_local i32 @TRACE_IN(%struct.configuration_entry* (%struct.configuration*, i64)*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @TRACE_OUT(%struct.configuration_entry* (%struct.configuration*, i64)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
